--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -1,7 +1,6 @@
-body {
-  font-size: 1.4rem;
-}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-h1 {
-  color: green;
+body {
+  font-family: "Open Sans";
+  font-size: 1.4rem;
 }
