Implement some style and functionality

--- a/client/src/components/styles/Products.css
+++ b/client/src/components/styles/Products.css
@@ -1,9 +1,31 @@
 .relatedProducts {
   border: 1px solid black;
   display: inline-block;
+  position: relative;
   height: 250px;
-  width: 100vw;
-  padding: 20px;
-  overflow: auto;
+  width: 95vw;
+}
+
+.inner {
+  padding: 10px;
+  overflow: hidden;
+  position: relative;
   white-space: nowrap;
+}
+
+.goLeft, .goRight {
+  border: 1px solid #333333;
+  border-radius: 3px;
+  position: absolute;
+	top: 90px;
+	bottom: 90px;
+	width: 3em;
+}
+
+.goRight {
+  right: 0
+}
+
+.goLeft {
+  left: 0;
 }
